fixing align full post

--- a/components/categorypage/categoryheader/postcategorylist/categoryfullwidth.module.scss
+++ b/components/categorypage/categoryheader/postcategorylist/categoryfullwidth.module.scss
@@ -25,7 +25,7 @@
             width:621px;
             min-height: 371px;
             bottom: 0;
-            left: -350px;
+            left: -295px;
             @media(max-width:576px){
                 width: 100%;
                 left:0px;
